[Autofill] Fix bank name metric for suggestions filled for MASKED server cards

Bug: 839029
Change-Id: I11bb3eb81a3e2ac04bd8f99332756e8529b94f7b
Reviewed-on: https://chromium-review.googlesource.com/1040535
Commit-Queue: Jared Saul <jsaul@google.com>
Commit-Queue: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Roger McFarlane <rogerm@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555519}
Former-commit-id: 97e89f6879839baac6c1ef876b4aceaa1937747a